Add the confgenericv4l

--- a/copos/plugins/Makefile.am
+++ b/copos/plugins/Makefile.am
@@ -10,7 +10,8 @@ noinst_LTHEADERS = $(wildcard *.h)
 
 INCLUDES = -I.. @GLIB2_CFLAGS@ @GTK2_CFLAGS@ @PWC_CFLAGS@
 
-libgenericv4l_la_SOURCES = genericv4l.c  genericv4l.h webcam.h
+libgenericv4l_la_SOURCES = genericv4l.c  genericv4l.h webcam.h\
+			   confgenericv4l.c confgenericv4l.h
 libgenericv4l_la_LIBADD  = @GLIB2_LIBS@
 libgenericv4l_la_LDFLAGS = -rpath $(pkgdatadir) -avoid-version -module
 
@@ -18,6 +19,6 @@ libphilips740k_la_SOURCES = 	philips740k.c  philips740k.h  webcam.h \
 				confphilips.c confphilips.h \
 				confsizefrm.c confsizefrm.h \
 				confvidctrl.c confvidctrl.h \
-				confextensions.c confextensions.h \
-libphilips740k_la_LIBADD  = 	@GTK2_LIBS@
+				confextensions.c confextensions.h
+libphilips740k_la_LIBADD = @GTK2_LIBS@
 libphilips740k_la_LDFLAGS = -rpath $(pkgdatadir) -avoid-version -module
