--- a/copos/display/Makefile.am
+++ b/copos/display/Makefile.am
@@ -8,8 +8,6 @@ libdisplay_a_SOURCES = trackball.c trackball.h \
                   generate.c generate.h \
                   positions.c positions.h \
                   picklaser.c picklaser.h \
-                  recorder.c recorder.h \
-                  choosemodule.c choosemodule.h \
-                  choosedevice.c choosedevice.h \
+                  choosefile.c choosefile.h \
                   introduction.c introduction.h \
                   mainwindow.c mainwindow.h
