--- a/copos/po/POTFILES.in
+++ b/copos/po/POTFILES.in
@@ -2,9 +2,7 @@ display/visualization.c
 display/generate.c
 display/positions.c
 display/picklaser.c
-display/recorder.c
-display/choosemodule.c
-display/choosedevice.c
+display/choosefile.c
 display/introduction.c
 display/mainwindow.c
 main.c
