Correct configure problems

--- a/qrust/Makefile.am
+++ b/qrust/Makefile.am
@@ -1,9 +1,7 @@
 AC_AUX_DIR = m4
 AC_MACRO_DIR = m4
 
-EXTRA_DIST = $(top_srcdir)/bootstrap
-
-SUBDIRS = display 
+SUBDIRS = display math
 bin_PROGRAMS = qrust
 
 INCLUDES = -I.. @QT_CXXFLAGS@
@@ -11,3 +9,4 @@ INCLUDES = -I.. @QT_CXXFLAGS@
 qrust_SOURCES = main.cpp
 qrust_LDADD = 	display/libdisplay.a \
 		@QT_LIBS@
+
