--- a/qrust/Makefile.am
+++ b/qrust/Makefile.am
@@ -10,3 +10,12 @@ qrust_SOURCES = main.cpp
 qrust_LDADD = 	display/libdisplay.a \
 		@QT_LIBS@
 
+dist-hook:
+	if test -d examples; then \
+          mkdir $(distdir)/examples; \
+          for data in examples/*; do \
+            if test -f $$data; then \
+                cp -p $$data $(distdir)/examples; \
+            fi \
+          done \
+        fi
